--- a/prokopyev.Nsudotnet.Enigma/prokopyev.Nsudotnet.Enigma/prokopyev.Nsudotnet.Enigma.csproj
+++ b/prokopyev.Nsudotnet.Enigma/prokopyev.Nsudotnet.Enigma/prokopyev.Nsudotnet.Enigma.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Codetype.cs" />
     <Compile Include="Decryptor.cs" />
     <Compile Include="Encryptor.cs" />
     <Compile Include="Program.cs" />
